Design of admin dashbaord

--- a/adminquizcontrol.html
+++ b/adminquizcontrol.html
@@ -244,7 +244,7 @@
  		<table>
  			<tr>
  				<td>
- 					<img src="images/userspotrait.png" width="75px">
+ 					<img src="images/group-icon.png" width="75px">
  				</td>
  				<td>
  					<label class="largeText dodgerblueText">TOTAL USERS : <span>null</span></label>
@@ -258,7 +258,7 @@
  		<table>
  			<tr>
  				<td>
- 					<img src="images/userspotrait.png" width="75px">
+ 					<img src="images/web-icon.png" width="75px">
  				</td>
  				<td>
  					<label class="smallText dodgerblueText">WEB enrolls : <span>null</span></label>
@@ -270,7 +270,7 @@
  			<table>
  			<tr>
  				<td>
- 					<img src="images/userspotrait.png" width="75px">
+ 					<img src="images/java-icon.png" width="75px">
  				</td>
  				<td>
  					<label class="smallText dodgerblueText">JAVA enrolls : <span>null</span></label>
@@ -282,7 +282,7 @@
  			<table>
  			<tr>
  				<td>
- 					<img src="images/userspotrait.png" width="75px">
+ 					<img src="images/python-icon.png" width="75px">
  				</td>
  				<td>
  					<label class="smallText dodgerblueText">PYTHON enrolls : <span>null</span></label>
