Design of admin dashbaord

--- a/adminquizcontrol.html
+++ b/adminquizcontrol.html
@@ -270,7 +270,7 @@
  			<table>
  			<tr>
  				<td>
- 					<img src="images/java-icon.png" width="75px">
+ 					<img src="images/Java-icon.png" width="75px">
  				</td>
  				<td>
  					<label class="smallText dodgerblueText">JAVA enrolls : <span>null</span></label>
