Design of admin dashbaord

--- a/adminquizcontrol.html
+++ b/adminquizcontrol.html
@@ -244,7 +244,7 @@
  		<table id="totalusers">
  			<tr>
  				<td>
- 					<img src="images/group-icon.png" width="75px">
+ 					<img src="images/Group-icon.png" width="75px">
  				</td>
  				<td>
  					<label class="largeText dodgerblueText">TOTAL USERS : <span>null</span></label>
