Design of admin dashbaord

--- a/adminquizcontrol.html
+++ b/adminquizcontrol.html
@@ -8,8 +8,8 @@
 	<link rel="stylesheet" type="text/css" href="styles/adminquizcontrol.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-<body style="background: #f1f1f1;">
-<div class="bannerholder">
+<body style="background: #f1f1f1;" >
+<div class="bannerholder mybody">
 	<div class="logoholder"> 
 		<br><br><br>Online learning
 	</div>
@@ -337,21 +337,19 @@
  		</table>
  	</div>
  	</div>
- 	<!-- POP UP UNIT ANALYSIS -->
+ 	
+ </section>
+<!-- POP UP UNIT ANALYSIS -->
  	<div class="scroll-analysis">
- 	<label class="mybutton" id="btncloseanalysis"><span>X</span></label>
  
  		<div class="analysis-holder">
-	popup analysis
+	<label class="mybutton" id="btncloseanalysis"><span>X</span></label>
+	<label class="analytic-titel">null</label>
 	</div>
- 	
-	
-	
+
 </div>
 
 <!-- end of popup -->
- </section>
-
 <div class="footer">
 	<div class="rightfooter">
 		<center>
