Design of admin dashbaord

--- a/adminquizcontrol.html
+++ b/adminquizcontrol.html
@@ -358,6 +358,11 @@
  	 <label>RESULTS </label><br>
  	 <canvas id="barGraphResults" width="50%"></canvas>
  		</div>
+ 		<div class="report-card-longer">
+ 			
+ 	 <label>GENERAL INFORMATION </label><br>
+ 	 <canvas id="barGraphUnitReport" width="50%"></canvas>
+ 		</div>
 	</div>
 	
 	</div>
