Working on the user profile data fetching

--- a/profile.html
+++ b/profile.html
@@ -66,13 +66,21 @@
 	 
 	 </div>
 
-	 
-
  <div class="profiledetails">
  	<div class="profile-enrolls">
  		 <center>
  		 	<h2>Your Enrolls</h2>
  		 </center>
+         
+         <div class="enroll-card">
+         	<center>
+         	<label id="profile-enroll-item"> </label>
+         	<label id="profile-enroll-score"> </label>
+         	<label id="profile-enroll-level"> </label>
+         	</center>
+         </div>
+
+
  	</div>
  	<div class="profile-data">
  			<center>
